# claude-code-mcp-enhanced

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  TASK_ORCHESTRATION_DEMO.md  chrome-tab-interaction.js  converted_tasks.json  create_geography_task.js  display_results.js  execution_modes_demo.js  execution_modes_tasks.json  generated_task.json  interact-with-vertex.js  monitor_tasks.js  package-lock.json  package.json  pyproject.toml  requirements.txt  run_execution_modes_demo.js  run_parent_task.js  simple-test.js  simple_task_converter.js  start_server.js  test-task-execution.js  test_instance_pool.js  test_real_execution.js  test_task_execution.js  test_task_planner.js  test_wait_completion.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
docs/: converted_sample_task.json  converted_simple_task.json  dirname_fix_report.md  mcp_integration_guide.md  standalone_output.json  task_amender_guide.md  task_conversion_test_report.md  task_template_workflow.md
docs/reports/: 003_task_1_converter.md  004_task_1_sequential_geography_question.md  004_task_2_parallel_python_functions.md  004_task_3_sequential_apple_color.md  004_task_5_timeout_handling.md  (+5 more)
scripts/: amend_task.py  convert_bridge_cjs.cjs  convert_task_bridge.js  mcp_bridge.sh  run_mixed_flow_example.sh  run_parallel_example.sh  run_sequential_example.sh  simple_bridge.js  task_bridge.cjs  task_bridge.js  task_to_json.py
src/: boomerang_handler.ts  instance_pool.ts  pooled_task_command.ts  server.ts  server_patch.patch  task_command.ts
test_files/: amended_task.md  formatted_task.json  formatted_task.md  simple_task.json  simple_task.md
test_tasks/: test_task.md
tests/: test_mcp_conversion.js  test_mcp_sdk_client.js
(+57 files in other folders)
